# qinotify

./: CMakeLists.txt  LICENSE  README.asciidoc
examples/: warning.asciidoc
src/: compiler.cpp  compiler.h  inotifier.cpp  inotifier.h  main.cpp  mainwindow.cpp  mainwindow.h  viewer.cpp  viewer.h
